[tool.poetry]
name = "blog-rogryza-me"
version = "0.1.0"
description = "My personal blog."
authors = ["Rodrigo Gryzinski <contact@rogryza.me>"]
license = "Unlicense"

[tool.poetry.dependencies]
python = "^3.7"
statik = "^0.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
